force-app/main/default/objects/Log_Entry__c/fields/Calculated_Calories__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Calories__c</fullName>
    <label>Calculated Calories</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>