force-app/main/default/objects/Log_Entry__c/fields/Daily_Log__c.field-meta.xml
<CustomField>
    <fullName>Daily_Log__c</fullName>
    <label>Daily Log</label>
    <referenceTo>Daily_Log__c</referenceTo>
    <relationshipLabel>Log Entries</relationshipLabel>
    <relationshipName>Log_Entries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>