force-app/main/default/objects/Log_Entry__c/fields/Food_Item__c.field-meta.xml
<CustomField>
    <fullName>Food_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Food Item</label>
    <referenceTo>Food_Item__c</referenceTo>
    <relationshipLabel>Log Entries</relationshipLabel>
    <relationshipName>Log_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>