force-app/main/default/objects/Log_Entry__c/fields/Weight_g__c.field-meta.xml
<CustomField>
    <fullName>Weight_g__c</fullName>
    <label>Weight g</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>